<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp.SignUpStep5Fragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_background"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <View
        android:id="@+id/divider_progress"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@drawable/background_progress_bar"
        app:layout_constraintBottom_toBottomOf="@id/divider_background"
        app:layout_constraintEnd_toEndOf="@+id/divider_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/divider_background"
        app:layout_constraintTop_toTopOf="@+id/divider_background"
        app:layout_constraintWidth_percent="0.8333" />

    <Button
        android:id="@+id/button_next"
        style="@style/NextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="다음"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_background"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_step"
                style="@style/SignUpStepChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Step.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_intro"
                style="@style/HeadLine3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="서비스 이용을 위해\n이용약관 동의가 필요해요"
                android:textColor="@color/black_50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_step"
                app:layout_constraintTop_toBottomOf="@+id/textView_step" />

            <TextView
                android:id="@+id/textView_agreement_all"
                style="@style/BodyAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_signup_edittext_success"
                android:paddingHorizontal="15dp"
                android:paddingVertical="13dp"
                android:text="전체동의"
                android:textColor="@color/primary_50"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_intro"
                app:layout_constraintTop_toBottomOf="@+id/textView_intro" />

            <ImageView
                android:id="@+id/imageView_checkbox_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_checkbox_unchecked"
                app:layout_constraintBottom_toBottomOf="@+id/textView_agreement_all"
                app:layout_constraintEnd_toEndOf="@+id/textView_agreement_all"
                app:layout_constraintTop_toTopOf="@+id/textView_agreement_all" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_signup_edittext_unselected"
                android:paddingVertical="20dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_agreement_all">

                <TextView
                    android:id="@+id/chip_agreement1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_agreement_essential"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="10.5dp"
                    android:paddingVertical="1dp"
                    android:textSize="10sp"
                    android:text="필수"
                    android:textColor="@color/black_40"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_agreement1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement1"
                    android:fontFamily="@font/inter_semi_bold"
                    android:textColor="@color/black_50"
                    android:textSize="12sp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/chip_agreement1"
                    app:layout_constraintStart_toEndOf="@+id/chip_agreement1"
                    app:layout_constraintTop_toTopOf="@+id/chip_agreement1" />

                <ImageView
                    android:id="@+id/imageView_checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_checkbox_unchecked"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_agreement1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_agreement1" />

                <TextView
                    android:id="@+id/chip_agreement2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_agreement_essential"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="10.5dp"
                    android:paddingVertical="1dp"
                    android:textSize="10sp"
                    android:text="필수"
                    android:textColor="@color/black_40"
                    android:layout_marginTop="19dp"
                    app:layout_constraintStart_toStartOf="@+id/chip_agreement1"
                    app:layout_constraintTop_toBottomOf="@+id/chip_agreement1" />

                <TextView
                    android:id="@+id/textView_agreement2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement2"
                    android:fontFamily="@font/inter_semi_bold"
                    android:textColor="@color/black_50"
                    android:textSize="12sp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/chip_agreement2"
                    app:layout_constraintStart_toEndOf="@+id/chip_agreement2"
                    app:layout_constraintTop_toTopOf="@+id/chip_agreement2" />

                <ImageView
                    android:id="@+id/imageView_checkbox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_checkbox_unchecked"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_agreement2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_agreement2" />

                <TextView
                    android:id="@+id/chip_agreement3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_agreement_optional"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="10.5dp"
                    android:paddingVertical="1dp"
                    android:textSize="10sp"
                    android:text="선택"
                    android:textColor="@color/white"
                    android:layout_marginTop="19dp"
                    app:layout_constraintStart_toStartOf="@+id/chip_agreement2"
                    app:layout_constraintTop_toBottomOf="@+id/chip_agreement2" />

                <TextView
                    android:id="@+id/textView_agreement3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement3"
                    android:fontFamily="@font/inter_semi_bold"
                    android:textColor="@color/black_50"
                    android:textSize="12sp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/chip_agreement3"
                    app:layout_constraintStart_toEndOf="@+id/chip_agreement3"
                    app:layout_constraintTop_toTopOf="@+id/chip_agreement3" />

                <ImageView
                    android:id="@+id/imageView_checkbox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_checkbox_unchecked"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_agreement3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_agreement3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>